--- a/views/home.html
+++ b/views/home.html
@@ -37,10 +37,11 @@
           </button>
         </div>
       </div>
+      <div class=" header-abajo">
       <nav class="main-nav">
         <ul class="nav nav-bar">
           <li><a class="links-header" href="#">Ofertas</a></li>
-          <li><a class="links-header" href="#">Tiendas Oficiales</a></li>
+          <li><a class="links-header" href="#">Tiendas</a></li>
           <li><a class="links-header" href="#">Vender</a></li>
           <li><a class="links-header" href="#">Ayuda</a></li>
         </ul>
@@ -64,6 +65,7 @@
       <a class="burger-menu">
         <i class="fas fa-bars"></i>
       </a>
+      </div>
     </header>
     <img class="banner" src="/images/img-home-banner.jpg" />
     <main>
