--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -18,11 +17,13 @@ p {
   font-size: 1.2rem;
 }
 
-
 header {
   width: 100vw;
   background-color: yellow;
   padding-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header-arriba {
@@ -43,24 +44,29 @@ header {
   align-items: center;
   width: 50%;
   height: 3rem;
+  border: 1px solid grey;
+  border-radius: 5px;
 }
 
 .search-bar {
-  width: 100%;
+  width: calc(100% - 3rem);
   height: 100%;
   font-size: 1.5rem;
-  border: 1px solid grey;
   padding: 0.5rem;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+  border: none;
 }
 
 .search-btn {
+  width: 3rem;
   height: 100%;
   padding: 0.5rem;
   border: 1px solid grey;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-left: none;
+  border-radius: 0 5px 5px 0;
+  background-color: lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fa-magnifying-glass {
@@ -68,15 +74,29 @@ header {
   font-size: 1.5rem;
 }
 
+
+  .header-abajo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 2rem;
+  }
+
+
 .main-nav {
+  display: flex;
   justify-content: space-between;
   align-items:center;
   gap: 0.5rem;
   text-decoration: none;
-  font-size: 3px;
+  font-size: 1.6rem;
   padding: 1rem 1.3rem;
+  margin: 2rem 0;
   border-radius: 5px;
+  background-color: yellow;
+  color: black;
 }
+
 .nav {
   display: block;
   gap: 0.5rem;
@@ -85,12 +105,11 @@ header {
 .links-header {
   text-decoration: none;
   color: black;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
-
 .burger-menu {
-  display: block;
+  display: none;
   max-width: 4rem;
   margin: 0 auto;
   background-color: blue;
@@ -100,42 +119,43 @@ header {
   border-radius: 5px;
 }
 
-
-
 .banner {
   width: 100%;
   vertical-align: middle;
 }
 
-
 main {
-  padding: 0rem 5%;
-  background-color: white;
+  padding: 1rem 5%;
+  background-color: #f7f7f7;
 }
 
 .titulares {
   font-size: 2.4rem;
-  color:grey;
-  padding-top: 10px;
-  padding-bottom: 20px;
+  color: #333;
+  padding: 20px 0;
+  text-align: center;
 }
 
 main section article {
   display: flex;
   flex-direction: column;
-  background-color: white;
-  margin-bottom: 10px;
-  border-radius: 2px;
+  background-color: #fff;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #ddd;
   transition: all 0.4s;
-
+  position: relative;
 }
 
 .section-ofertas div article:last-child {
-  margin-bottom: 0 ;
+  margin-bottom: 0;
 }
 
 main section article img {
   padding: 1.6rem;
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 main section article:hover {
@@ -148,133 +168,147 @@ main section article:hover {
   padding: 15px;
   padding-top: 2rem;
   position: relative;
-
 }
 
-main section article:hover .fa-truck{
+main section article:hover .fa-truck {
   transform: rotate(-90deg);
 }
+
 .fa-truck {
   font-size: 1.6rem;
   padding: 0.5rem;
   width: 30px;
   height: 30px;
-  color:green;
-  border: 1px solid green;
-  background-color: white;
+  color: #3abf73;
+  border: 1px solid #3abf73;
+  background-color: #fff;
   border-radius: 50%;
   position: absolute;
   right: 20px;
   top: -10px;
-  transition:all 0.5s
+  transition: all 0.5s;
 }
 
 .precio-descuento-div {
   display: flex;
   gap: 6px;
   align-items: center;
-  
+  justify-content: space-between;
+  padding: 20px;
 }
-
-
 
 .precios {
   font-size: 1.8rem;
+  font-weight: bold;
+  color: #333;
 }
 
 .descuentos {
   font-size: 1.4rem;
-  color:green;
+  color: #3abf73;
 }
 
 .descripciones {
   font-size: 1.6rem;
-  color: grey;
-  display: none;
+  color: #999;
   margin-top: 15px;
-  visibility: hidden;
-}
-main section article:hover .descripciones{
-  visibility: visible;
+  display: none;
+  opacity: 0;
+  transition: all 0.5s;
 }
 
+main section article:hover .descripciones {
+  display: block;
+  opacity: 1;
+}
 
 .create-form {
   padding: 2rem 1.5rem;
-  background-color: grey;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #ddd;
 }
 
 .divs-form {
   margin-bottom: 1.5rem;
 }
 
+
 .divs-form label {
   display: block;
   font-style: normal;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-bottom: 0.5rem;
-}
-
-.control {
+  color: blue;
+  }
+  
+  .control {
   width: 100%;
-  padding: 0.8rem;
-  border-radius: 10px;
-  border: 1px solid grey
-}
-
-.control:focus {
+  padding: 1rem;
+  border-radius: 15px;
+  border: 1px solid blue;
+  box-shadow: 2px 2px 2px lightgray;
+  transition: all 0.4s;
+  }
+  
+  .control:focus {
   outline: none;
-  border: 2px solid yellow;
-}
-
-.div-buttons-form {
+  border: 2px solid blue;
+  box-shadow: 4px 4px 4px lightgray;
+  }
+  
+  .div-buttons-form {
   display: flex;
   justify-content: center;
-  gap: 1.5rem;
-  transition: all 0.4s
-}
-.div-buttons-form :hover {
-  color: blue;
-  cursor: pointer;
-}
-
-.create-form button {
-  background-color:blue;
+  gap: 2rem;
+  margin-top: 1rem;
+  }
+  
+  .div-buttons-form button {
+  background-color: blue;
   border: none;
   font-size: 20px;
-  color: grey;
+  color: white;
   padding: 0.5rem 1rem;
   border-radius: 4px;
-}
-
-.div-buttons-form :nth-child(2) {
-  background-color: grey;
-
-}
-
-
-footer div {
+  cursor: pointer;
+  transition: all 0.4s;
+  }
+  
+  .div-buttons-form button:hover {
+  background-color: lightblue;
+  color: blue;
+  }
+  
+  footer div {
   text-align: center;
   margin-top: 40px;
   padding: 0 5rem;
-}
-
-footer div i {
+  background-color: lightgray;
+  border-radius: 15px;
+  box-shadow: 2px 2px 2px lightgray;
+  }
+  
+  footer div i {
   color: blue;
-  font-size: 4rem;
+  font-size: 3rem;
   margin-bottom: 10px;
-}
-
-footer h3 {
-  color: grey;
+  }
+  
+  footer h3 {
+  color: blue;
   font-size: 1.6rem;
-}
-
-footer p {
-  color: grey;
-}
-
-.copyright {
+  }
+  
+  footer p {
+  color: blue;
+  font-size: 1.2rem;
+  }
+  
+  .copyright {
   margin-top: 30px;
   padding: 2rem;
-}
+  text-align: center;
+  color: lightgray;
+  font-size: 1.2rem;
+  }
