--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <div class="header-arriba">
-        <img href ="/" class="logo" src="/images/logo-mercado-liebre.svg" alt="logo" />
+        <img class="logo" src="/images/logo-mercado-liebre.svg" alt="logo" />
         <div class="search-bar-div">
           <input
             class="search-bar"
@@ -37,15 +37,12 @@
           </button>
         </div>
       </div>
-      <div class=" header-abajo">
       <nav class="main-nav">
         <ul class="nav nav-bar">
           <li><a class="links-header" href="#">Ofertas</a></li>
-          <li><a class="links-header" href="#">Tiendas</a></li>
+          <li><a class="links-header" href="#">Tiendas Oficiales</a></li>
           <li><a class="links-header" href="#">Vender</a></li>
           <li><a class="links-header" href="#">Ayuda</a></li>
-        </ul>
-        <ul class="nav login-bar">
           <li>
             <a class="links-header" href="/register">Creá tu cuenta <i class="fa-regular fa-id-card"></i
             ></a>
@@ -65,7 +62,6 @@
       <a class="burger-menu">
         <i class="fas fa-bars"></i>
       </a>
-      </div>
     </header>
     <img class="banner" src="/images/img-home-banner.jpg" />
     <main>
